bug fixes for user and email
