# models/user.go
@@ -1,6 +1,11 @@
 package models
 
-import "time"
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
 
 // User Database model info
 // @Description App type information
@@ -14,21 +19,27 @@ type User struct {
 	Roles         []Role    `gorm:"many2many:user_roles; constraint:OnUpdate:CASCADE; OnDelete:CASCADE;" json:"roles,omitempty"`
 }
 
+func (user *User) BeforeCreate(tx *gorm.DB) (err error) {
+	gen, _ := uuid.NewV7()
+	id := gen.String()
+	user.UUID = id
+	user.Password = hashfunc(user.Password)
+	return
+}
+
 // UserPost model info
 // @Description UserPost type information
 type UserPost struct {
-	Email string `gorm:"not null; unique;" json:"email,omitempty"`
-
-	DateRegistred time.Time `gorm:"constraint:not null; default:current_timestamp;" json:"date_registered,omitempty"`
-	Disabled      bool      `gorm:"default:true; constraint:not null;" json:"disabled"`
+	Email    string `gorm:"not null; unique;" json:"email,omitempty"`
+	Password string `gorm:"not null;" json:"password,omitempty"`
+	Disabled bool   `gorm:"default:true; constraint:not null;" json:"disabled"`
 }
 
 // UserGet model info
 // @Description UserGet type information
 type UserGet struct {
-	ID    uint   `gorm:"primaryKey;autoIncrement:true" json:"id,omitempty"`
-	Email string `gorm:"not null; unique;" json:"email,omitempty"`
-
+	ID            uint      `gorm:"primaryKey;autoIncrement:true" json:"id,omitempty"`
+	Email         string    `gorm:"not null; unique;" json:"email,omitempty"`
 	DateRegistred time.Time `gorm:"constraint:not null; default:current_timestamp;" json:"date_registered,omitempty"`
 	Disabled      bool      `gorm:"default:true; constraint:not null;" json:"disabled"`
 	UUID          string    `gorm:"constraint:not null; unique; type:string;" json:"uuid"`
